--- a/upload/catalog/view/template/account/login.twig
+++ b/upload/catalog/view/template/account/login.twig
@@ -11,7 +11,7 @@
   </div>
   <div class="col mb-3">
     <div class="border rounded p-3 d-flex flex-column h-100">
-      <form id="form-login" action="{{ login }}">
+      <form id="form-login" action="{{ login }}" data-bind="onsubmit:login">
         <h2>{{ text_returning_customer }}</h2>
         <p><strong>{{ text_i_am_returning_customer }}</strong></p>
         <div class="mb-3">
