--- a/upload/catalog/view/template/account/forgotten.twig
+++ b/upload/catalog/view/template/account/forgotten.twig
@@ -1,6 +1,6 @@
 <h1>{{ heading_title }}</h1>
 <p>{{ text_email }}</p>
-<form id="form-forgotten" action="{{ confirm }}">
+<form id="form-forgotten" action="{{ confirm }}" data-bind="onsubmit:save">
   <fieldset>
     <legend>{{ text_your_email }}</legend>
     <div class="row mb-3">
