--- a/upload/catalog/view/template/account/password.twig
+++ b/upload/catalog/view/template/account/password.twig
@@ -1,5 +1,5 @@
 <h1>{{ heading_title }}</h1>
-<form id="form-password" action="{{ save }}" method="post" data-oc-toggle="ajax">
+<form id="form-password" action="{{ save }}" data-bind="onsubmit:save">
   <fieldset>
     <legend>{{ text_password }}</legend>
     <div class="row mb-3">
