--- a/upload/catalog/view/template/cms/comment.twig
+++ b/upload/catalog/view/template/cms/comment.twig
@@ -34,7 +34,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body">
-        <form id="form-comment" action="" data-oc-target="" data-oc-trigger="">
+        <form id="form-comment" action="">
           <div class="mb-3">
             <label for="input-author" class="form-label">{{ entry_author }}</label>
             <input type="text" name="author" value="{{ author }}" placeholder="{{ entry_author }}" id="input-author" class="form-control" required/>
