--- a/upload/catalog/view/template/product/product_info.twig
+++ b/upload/catalog/view/template/product/product_info.twig
@@ -83,16 +83,17 @@
       </ul>
     {% endif %}
 
-    <form method="post" data-oc-toggle="ajax">
+    <form>
       <div class="btn-group">
         <button type="submit" formaction="{{ wishlist_add }}" class="btn btn-light btn-lg" title="{{ button_wishlist }}"><i class="fa-solid fa-heart"></i></button>
         <button type="submit" formaction="{{ compare_add }}" class="btn btn-light btn-lg" title="{{ button_compare }}"><i class="fa-solid fa-arrow-right-arrow-left"></i></button>
       </div>
       <input type="hidden" name="product_id" value="{{ product_id }}"/>
     </form>
+
     <br/>
     <div id="product">
-      <form id="form-product">
+      <form id="form-product" data-on="submit:save">
         {% if options %}
           <hr>
           <h3>{{ text_option }}</h3>
