--- a/upload/catalog/view/template/account/address_form.twig
+++ b/upload/catalog/view/template/account/address_form.twig
@@ -1,5 +1,5 @@
 <h1>{{ text_address }}</h1>
-<form id="form-address" action="{{ save }}" data-bind="onsubmit:save">
+<form id="form-address" action="{{ save }}" data-bind="onsubmit:submit">
   <fieldset>
     <div class="row mb-3">
       <label for="input-firstname" class="col-sm-2 col-form-label">{{ entry_firstname }}</label>
