--- a/upload/catalog/view/template/account/address_list.html
+++ b/upload/catalog/view/template/account/address_list.html
@@ -7,7 +7,7 @@
           <td>{% if address.default %}<strong>{{ text_default }}</strong>{% endif %}</td>
           <td class="text-end">
             <a href="{{ address.edit }}" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-regular fa-solid fa-pencil"></i></a>
-            <button type="button" value="{{ address.address_id }}" data-on="onclick.delete" title="{{ button_delete }}" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i></button>
+            <button type="button" value="{{ address.address_id }}" data-on="click:delete" title="{{ button_delete }}" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i></button>
           </td>
         </tr>
       {% endfor %}
