--- a/upload/catalog/view/template/account/affiliate.html
+++ b/upload/catalog/view/template/account/affiliate.html
@@ -1,5 +1,5 @@
 <h1>{{ heading_title }}</h1>
-<form id="form-affiliate" action="{{ save }}" method="post" data-bind="onsubmit:save">
+<form id="form-affiliate" action="{{ save }}" data-bind="onsubmit:submit">
   <fieldset>
     <legend>{{ text_my_affiliate }}</legend>
     <div class="row mb-3">
