--- a/upload/catalog/view/template/account/edit.html
+++ b/upload/catalog/view/template/account/edit.html
@@ -1,6 +1,6 @@
 <template id="account-edit">
   <h1>{{ heading_title }}</h1>
-  <form id="form-customer" action="{{ save }}" data-on="onsubmit:edit">
+  <form id="form-customer" action="{{ save }}" data-on="submit:edit">
     <fieldset>
       <legend>{{ text_your_details }}</legend>
       <div class="row mb-3">
