--- a/upload/catalog/view/template/account/forgotten_reset.twig
+++ b/upload/catalog/view/template/account/forgotten_reset.twig
@@ -1,5 +1,5 @@
 <h1>{{ heading_title }}</h1>
-<form id="form-reset" action="{{ save }}"data-bind="onsubmit:save">
+<form id="form-reset" action="{{ save }}" data-bind="onsubmit:submit">
   <fieldset>
     <legend>{{ text_password }}</legend>
     <div class="row mb-3">
