--- a/upload/catalog/view/template/account/register.twig
+++ b/upload/catalog/view/template/account/register.twig
@@ -1,7 +1,7 @@
 <h1>{{ heading_title }}</h1>
 <p>{{ text_account_already }}</p>
 
-<form id="form-register" action="{{ register }}" data-on="onsubmit.save">
+<form id="form-register" action="{{ register }}" data-on="submit:submit">
 
   <fieldset id="account">
 
@@ -11,7 +11,7 @@
       <div class="row mb-3">
         <label for="input-customer-group" class="col-sm-2 col-form-label">{{ entry_customer_group }}</label>
         <div class="col-sm-10">
-          <select name="customer_group_id" id="input-customer-group" class="form-select" data-on="onchange:customer_group" required>
+          <select name="customer_group_id" id="input-customer-group" class="form-select" data-on="change:customer_group" required>
             {% for customer_group in customer_groups %}
               <option value="{{ customer_group.customer_group_id }}"{% if customer_group.customer_group_id == customer_group_id %} selected{% endif %}>{{ customer_group.name }}</option>
             {% endfor %}
