--- a/upload/catalog/view/template/account/wishlist_list.twig
+++ b/upload/catalog/view/template/account/wishlist_list.twig
@@ -17,10 +17,12 @@
           <tr>
             <td class="text-center">{% if product.thumb %}<a href="{{ product.href }}"><img src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" style="width: 60px"/></a>{% endif %}</td>
             <td><a href="{{ product.href }}">{{ product.name }}</a>
-              <form id="form-product-{{ product_row }}" action="{{ cart_add }}" method="post" data-oc-toggle="ajax" data-oc-load="{{ cart }}" data-oc-target="#cart">
+
+              <form id="form-product-{{ product_row }}" action="{{ cart_add }}" data-on="submit:submit">
                 <input type="hidden" name="product_id" value="{{ product.product_id }}"/>
                 <input type="hidden" name="quantity" value="{{ product.minimum }}"/>
               </form>
+
             </td>
             <td>{{ product.model }}</td>
             <td class="text-end">{{ product.stock }}</td>
