--- a/upload/catalog/view/template/account/authorize.html
+++ b/upload/catalog/view/template/account/authorize.html
@@ -8,7 +8,7 @@
         <div class="card">
           <div class="card-header"><i class="fa-solid fa-lock"></i> {{ heading_title }}</div>
           <div class="card-body">
-            <form id="form-authorize" action="{{ action }}" data-bind="onsubmit:submit">
+            <form id="form-authorize" action="{{ action }}" data-on="submit:submit">
               <p>{{ text_security }}</p>
               <p>{{ text_code }}</p>
               <div class="mb-3">
