--- a/upload/catalog/view/template/checkout/register.twig
+++ b/upload/catalog/view/template/checkout/register.twig
@@ -1,4 +1,4 @@
-<form id="form-register" data-bind="onsubmit:submit">
+<form id="form-register" data-on="submit:submit">
   <p>{{ text_login }}</p>
   <fieldset>
     <legend>{{ heading_title }}</legend>
