--- a/upload/catalog/view/template/information/contact.html
+++ b/upload/catalog/view/template/information/contact.html
@@ -83,7 +83,7 @@
     {% endfor %}
   </div>
 {% endif %}
-<form id="form-contact" action="{{ send }}" data-bind="onsubmit:send">
+<form id="form-contact" action="{{ send }}" data-on="submit:send">
   <fieldset>
     <legend>{{ text_contact }}</legend>
     <div class="row mb-3">
