--- a/upload/catalog/view/template/information/gdpr.html
+++ b/upload/catalog/view/template/information/gdpr.html
@@ -1,6 +1,6 @@
 <h1>{{ heading_title }}</h1>
 <p>{{ text_gdpr|format(store, gdpr, title) }}</p>
-<form action="{{ action }}" data-bind="onsubmit:submit">
+<form action="{{ action }}" data-on="submit:submit">
   <fieldset>
     <legend id="account">{{ text_verification }}</legend>
     <div class="mb-3">
