--- a/upload/catalog/view/template/information/information.html
+++ b/upload/catalog/view/template/information/information.html
@@ -1,3 +1,7 @@
+<h1>{{ heading_title }}</h1>
+{{ description }}
+
+
 <div id="modal-information" class="modal fade">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
