--- a/upload/catalog/view/template/account/forgotten_reset.html
+++ b/upload/catalog/view/template/account/forgotten_reset.html
@@ -1,5 +1,5 @@
 <h1>{{ heading_title }}</h1>
-<form id="form-reset" action="{{ save }}" data-on="submit:submit">
+<form id="form-reset" action="{{ save }}" data-on="submit:onSubmit">
   <fieldset>
     <legend>{{ text_password }}</legend>
     <div class="row mb-3">
