--- a/upload/catalog/view/template/product/review.html
+++ b/upload/catalog/view/template/product/review.html
@@ -1,4 +1,4 @@
-<form id="form-review" data-on="submit:submit">
+<form id="form-review" data-on="submit:onSubmit">
   <div id="review">{{ list }}</div>
   <h2>{{ text_write }}</h2>
   {% if review_guest %}
