--- a/upload/catalog/view/template/product/thumb.html
+++ b/upload/catalog/view/template/product/thumb.html
@@ -34,15 +34,17 @@
         {% endif %}
 
       </div>
+
       <form method="post" data-oc-target="#cart">
         <div class="button">
-          <button type="submit" formaction="{{ cart_add }}" title="{{ button_cart }}"><i class="fa-solid fa-shopping-cart"></i></button>
-          <button type="submit" formaction="{{ wishlist_add }}" title="{{ button_wishlist }}"><i class="fa-solid fa-heart"></i></button>
-          <button type="submit" formaction="{{ compare_add }}" title="{{ button_compare }}"><i class="fa-solid fa-arrow-right-arrow-left"></i></button>
+          <button type="submit" formaction="{{ cart_add }}" title="{{ button_cart }}" data-bind="button_cart"><i class="fa-solid fa-shopping-cart"></i></button>
+          <button type="submit" formaction="{{ wishlist_add }}" title="{{ button_wishlist }}" data-bind="button_wishlist"><i class="fa-solid fa-heart"></i></button>
+          <button type="submit" formaction="{{ compare_add }}" title="{{ button_compare }}" data-bind="button_compare"><i class="fa-solid fa-arrow-right-arrow-left"></i></button>
         </div>
         <input type="hidden" name="product_id" value="{{ product_id }}"/>
         <input type="hidden" name="quantity" value="{{ minimum }}"/>
       </form>
+
     </div>
   </div>
 </template>
