--- a/upload/catalog/view/template/account/address.html
+++ b/upload/catalog/view/template/account/address.html
@@ -35,7 +35,7 @@
 
 <div id="address-form">
   <h1>{{ text_address }}</h1>
-  <form id="form-address" action="{{ save }}" data-on="submit:submit">
+  <form id="form-address" action="{{ save }}" data-on="submit:onSubmit">
     <fieldset>
       <div class="row mb-3">
         <label for="input-firstname" class="col-sm-2 col-form-label">{{ entry_firstname }}</label>
