--- a/upload/catalog/view/template/account/edit.html
+++ b/upload/catalog/view/template/account/edit.html
@@ -1,5 +1,5 @@
 <h1>{{ heading_title }}</h1>
-<form id="form-customer" action="{{ save }}" data-on="submit:edit">
+<form id="form-customer" action="{{ save }}" data-on="submit:onSubmit">
   <fieldset>
     <legend>{{ text_your_details }}</legend>
     <div class="row mb-3">
