--- a/upload/catalog/view/template/account/login.html
+++ b/upload/catalog/view/template/account/login.html
@@ -11,7 +11,7 @@
   </div>
   <div class="col mb-3">
     <div class="border rounded p-3 d-flex flex-column h-100">
-      <form id="form-login" action="{{ login }}" data-on="submit:login">
+      <form id="form-login" action="{{ login }}" data-on="submit:onSubmit">
 
         <h2>{{ text_returning_customer }}</h2>
         <p><strong>{{ text_i_am_returning_customer }}</strong></p>
