--- a/upload/catalog/view/template/account/newsletter.html
+++ b/upload/catalog/view/template/account/newsletter.html
@@ -1,5 +1,5 @@
 <h1>{{ heading_title }}</h1>
-<form id="form-newsletter" action="{{ save }}" data-on="submit:submit">
+<form id="form-newsletter" action="{{ save }}" data-on="submit:onSubmit">
   <fieldset>
     <div class="row mb-3 mb-0">
       <label class="col-md-3 col-form-label">{{ entry_newsletter }}</label>
