--- a/upload/catalog/view/template/checkout/shipping_address.twig
+++ b/upload/catalog/view/template/checkout/shipping_address.twig
@@ -13,7 +13,7 @@
   </div>
 
   <div id="shipping-existing" style="display: {% if addresses %}block{% else %}none{% endif %};">
-    <select name="address_id" id="input-shipping-address" class="form-select" data-on="change:change">
+    <select name="address_id" id="input-shipping-address" class="form-select" data-on="change:onChange">
       <option value="">{{ text_select }}</option>
       {% for address in addresses %}
         <option value="{{ address.address_id }}"{% if address.address_id == address_id %} selected{% endif %}>{{ address.firstname }} {{ address.lastname }},{% if address.company %} {{ address.company }},{% endif %} {{ address.address_1 }}, {{ address.city }}, {{ address.zone }}, {{ address.country }}</option>
@@ -23,7 +23,7 @@
   </div>
   <br/>
   <div id="shipping-new" style="display: {% if not addresses %}block{% else %}none{% endif %};">
-    <form id="form-shipping-address" data-on="submit:submit">
+    <form id="form-shipping-address" data-on="submit:onSubmit">
       <div class="row row-cols-1 row-cols-md-2">
         <div class="col mb-3">
           <label for="input-shipping-firstname" class="form-label">{{ entry_firstname }}</label >
