[3.0.x.x] Checkbox left margin fix
For the admin sale order info

--- a/upload/admin/view/template/sale/order_info.twig
+++ b/upload/admin/view/template/sale/order_info.twig
@@ -239,7 +239,9 @@
                   <label class="col-sm-2 control-label" for="input-override"><span data-toggle="tooltip" title="{{ help_override }}">{{ entry_override }}</span></label>
                   <div class="col-sm-10">
                     <div class="checkbox">
-                      <input type="checkbox" name="override" value="1" id="input-override"/>
+                      <label>
+                        <input type="checkbox" name="override" value="1" id="input-override"/>
+                      </label>
                     </div>
                   </div>
                 </div>
@@ -247,7 +249,9 @@
                   <label class="col-sm-2 control-label" for="input-notify">{{ entry_notify }}</label>
                   <div class="col-sm-10">
                     <div class="checkbox">
-                      <input type="checkbox" name="notify" value="1" id="input-notify"/>
+                      <label>
+                        <input type="checkbox" name="notify" value="1" id="input-notify"/>
+                      </label>
                     </div>
                   </div>
                 </div>
