--- a/upload/catalog/view/template/common/header.html
+++ b/upload/catalog/view/template/common/header.html
@@ -20,14 +20,14 @@
               <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown"><i class="fa-solid fa-user"></i> <span class="d-none d-lg-inline">{{ text_account }}</span> <i class="fa-solid fa-caret-down"></i></a>
               <ul class="dropdown-menu dropdown-menu-right">
                 {% if not logged %}
-                  <li><a href="account/register" data-on="click:register" class="dropdown-item">{{ text_register }}</a></li>
-                  <li><a href="account/login" data-on="click:login" class="dropdown-item">{{ text_login }}</a></li>
+                <li><a href="account/register" data-on="click:register" class="dropdown-item">{{ text_register }}</a></li>
+                <li><a href="account/login" data-on="click:login" class="dropdown-item">{{ text_login }}</a></li>
                 {% else %}
-                  <li><a href="account/account" class="dropdown-item">{{ text_account }}</a></li>
-                  <li><a href="account/order" class="dropdown-item">{{ text_order }}</a></li>
-                  <li><a href="account/transaction" class="dropdown-item">{{ text_transaction }}</a></li>
-                  <li><a href="account/download" class="dropdown-item">{{ text_download }}</a></li>
-                  <li><a href="account/logout" class="dropdown-item">{{ text_logout }}</a></li>
+                <li><a href="account/account" class="dropdown-item">{{ text_account }}</a></li>
+                <li><a href="account/order" class="dropdown-item">{{ text_order }}</a></li>
+                <li><a href="account/transaction" class="dropdown-item">{{ text_transaction }}</a></li>
+                <li><a href="account/download" class="dropdown-item">{{ text_download }}</a></li>
+                <li><a href="account/logout" class="dropdown-item">{{ text_logout }}</a></li>
                 {% endif %}
               </ul>
             </div>
@@ -45,15 +45,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3 col-lg-4">
-
         <div id="logo">
-          {% if config_logo %}
-            <a href="{{ config_url }}"><img src="{{ config_url }}image/{{ config_logo }}" title="{{ config_name }}" alt="{{ config_name }}" class="img-fluid"/></a>
-          {% else %}
-            <h1><a href="{{ config_url }}">{{ config_name }}</a></h1>
-          {% endif %}
+          {% if config_logo %} <a href="{{ config_url }}"><img src="{{ config_url }}image/{{ config_logo }}" title="{{ config_name }}" alt="{{ config_name }}" class="img-fluid"/></a>{% else %}<h1><a href="{{ config_url }}">{{ config_name }}</a></h1>{% endif %}
         </div>
-
       </div>
       <div class="col-md-5">
         <common-search></common-search>
